# secureVerificationModel

./: .gitignore  Cargo.toml  README.md  proof_times.csv
host/: Cargo.toml
host/src/: main.rs
methods/: Cargo.toml
methods/guest-a/: Cargo.toml
methods/guest-a/src/: main.rs
methods/guest-b/: Cargo.toml
methods/guest-b/src/: main.rs
methods/recursive-guest/: Cargo.toml
methods/recursive-guest/src/: main.rs
