[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "1.2", features = ["prove"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "1.3"
serde = "1.0"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
